# spal

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: windowOp.py
docs/: export.md  index.md  quickstart.md  writing_a_source.md
docs/api/: apply.md  source.md
docs/stylesheets/: extra.css
spal/: apply.py  benchmark.py  context.py  export.py  hierarchy.py  ops.py  source.py  sparklines.py  stimulus.py  window.py
src/spal/core/: context.py  hierarchy.py  source.py
tests/: global.py  helpers.py  rnd_spikes_source.py  test_apply.py  test_hierarchy.py  test_rnd_spikes_source.py
