[project]
name = "spal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.4.6",
]

[project.optional-dependencies]
fast = ["numba>=0.65.1"]
pandas = ["pandas>=2.0"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pynapple>=0.11.3",
    "scikit-learn>=1.9.0",
    "zarr>=2.18,<3",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spal"]
